<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/eight_dp">

            <TextView
                style="@style/CustomTextViewBold"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:text="@string/user_detail"/>

            <TextView
                style="@style/CustomTextViewNormal"
                android:layout_width="match_parent"
                android:text="@string/first_name_label"
                android:layout_marginTop="@dimen/sixteen_dp"/>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"/>

            <TextView
                style="@style/CustomTextViewNormal"
                android:layout_width="match_parent"
                android:text="@string/last_name_label"
                android:layout_marginTop="@dimen/sixteen_dp"/>
            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"/>
            <TextView
                style="@style/CustomTextViewNormal"
                android:layout_width="match_parent"
                android:text="@string/email_label"
                android:layout_marginTop="@dimen/sixteen_dp"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
            <TextView
                style="@style/CustomTextViewNormal"
                android:layout_width="match_parent"
                android:text="@string/address_label"
                android:layout_marginTop="@dimen/sixteen_dp"/>
            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"/>

            <TextView
                style="@style/CustomTextViewNormal"
                android:layout_width="match_parent"
                android:text="@string/pincode_label"
                android:layout_marginTop="@dimen/sixteen_dp" />
            <EditText
                android:id="@+id/editTextPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"/>

        </LinearLayout>
    </ScrollView>


    <include
        android:id="@+id/include"
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>